src/test/ui/associated-types/associated-types-invalid-trait-ref-issue-18865.stderr
error[E0277]: the trait bound `T: Foo<usize>` is not satisfied
  --> $DIR/associated-types-invalid-trait-ref-issue-18865.rs:10:12
   |
LL | fn f<T:Foo<isize>>(t: &T) {
   |      -- help: consider further restricting this bound: `T: Foo<usize> +`
LL |     let u: <T as Foo<usize>>::Bar = t.get_bar();
   |            ^^^^^^^^^^^^^^^^^^^^^^ the trait `Foo<usize>` is not implemented for `T`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
